--- a/Computing_Assignment_VII/group_The_Franciscans/assign_7_The_Franciscans.html
+++ b/Computing_Assignment_VII/group_The_Franciscans/assign_7_The_Franciscans.html
@@ -1327,6 +1327,8 @@ trendsp3
 
 </article></slide><slide class=""><hgroup><h2>Hausman tests for supply model</h2></hgroup><article  id="hausman-tests-for-supply-model">
 
+<p>The Chi-sq critical value for 5% significance with 6 d.f. (full model) is 12.59, and with 5 d.f. (model without ln_w) is 11.07. Therefore in neither case do we reject the null that OLS is consistent and efficient.</p>
+
 <table class="table" style="width: auto !important; margin-left: auto; margin-right: auto;">
 
 <caption>
@@ -1378,6 +1380,8 @@ Without ln_w
 </table>
 
 </article></slide><slide class=""><hgroup><h2>Supply model w/ area instead of total quantity</h2></hgroup><article  id="supply-model-w-area-instead-of-total-quantity" class="smaller">
+
+<p>We see that the estimated area elasticity is smaller (0.07) than the supply elasticity, which is in like with Roberts &amp; Schlenker, and our point estimates are similar to theirs as well.</p>
 
 <table class="table" style="width: auto !important; margin-left: auto; margin-right: auto;">
 
@@ -1825,6 +1829,8 @@ trendsp3
 
 </article></slide><slide class=""><hgroup><h2>What happens if we exclude the extra 7 years of data?</h2></hgroup><article  id="what-happens-if-we-exclude-the-extra-7-years-of-data" class="smaller">
 
+<p>If we re-run the full supply model excluding the 2008-2014 data, the OLS and IV estimates barely change. Our OLS estimate was 0.089 before with s.e. 0.012 and now it is 0.097 with s.e. 0.013. Our IV estimate was 0.102 before with s.e. 0.025 and now it is 0.103 with s.e. 0.024.</p>
+
 <table class="table" style="width: auto !important; margin-left: auto; margin-right: auto;">
 
 <caption>
@@ -2269,7 +2275,9 @@ trendsp3
 
 </table>
 
-</article></slide><slide class=""><hgroup><h2>Comments on organization of Canvas vs. RS dataset</h2></hgroup><article  id="comments-on-organization-of-canvas-vs.-rs-dataset"></article></slide>
+</article></slide><slide class=""><hgroup><h2>Comments on organization of Canvas vs. RS dataset</h2></hgroup><article  id="comments-on-organization-of-canvas-vs.-rs-dataset" class="smaller">
+
+<p>The RS data must be constructed by running a sequence of do files and merging datasets. This is helpful in that it is transparent and allows us to see how each of the variables are constructed. However, the canvas data is cleaner for running these specific regressions because from the RS dataset it is difficult to tell in which ultimate form the data are being used.</p></article></slide>
 
 
   <slide class="backdrop"></slide>
