Final version of slides.

--- a/Computing_Assignment_VIII/Clustered_Errors/Assignment_8.html
+++ b/Computing_Assignment_VIII/Clustered_Errors/Assignment_8.html
@@ -97,7 +97,13 @@
           </hgroup>
   </slide>
 
-<slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Cross Validation</h2></hgroup><article  id="cross-validation" class="smaller ">
+<slide class=""><hgroup><h2>Comments</h2></hgroup><article  id="comments" class="smaller ">
+
+<p>We find that the average rejection rate over the bootstrap samples is 0 when using the bootstrap critical value using the hypothesis centered around the true value. This makes sense as the bootstrap critical value becomes very large.</p>
+
+<p>We used the linear test from the beginning. By doing this we gained efficiency by not needing to approximate the function using the delta method.</p>
+
+</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Cross Validation</h2></hgroup><article  id="cross-validation" class="smaller ">
 
 </article></slide><slide class=""><hgroup><h2>Cross Validation: The Crossval Data Frame</h2></hgroup><article  id="cross-validation-the-crossval-data-frame" class="smaller ">
 
